[build-system]
requires = ["martec-agent"]
build-backend = "hatchling.build"

[project]
name = "martec-agent"
version = "0.1.0"
description = "Multi-agent CLI for automated market reaseach"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Vikash Singh", email = "vikash.singh@linuxmail.org"},
]
keywords = ["martec", "", "ai", "cli", "rag", "llm", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # CLI Framework
    "typer>=0.12.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "questionary>=2.0.0",

    # HTTP & APIs
    "httpx>=0.27.0",
    "arxiv>=2.1.0",
    "tenacity>=8.2.3",

    # LLM & Embeddings
    "anthropic>=0.39.0",
    "openai>=1.14.0",
    "google-generativeai>=0.4.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0",

    # Vector Store & RAG
    "chromadb>=0.5.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langgraph>=0.2.0",
    "rank-bm25>=0.2.2",

    # Topic Modeling
    "bertopic>=0.16.0",

    # PDF Processing
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.10",

    # Data & Storage
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlmodel>=0.0.16",
    "diskcache>=5.6.3",

    # Scheduling
    "apscheduler>=3.10.4",

    # Utilities
    "python-dateutil>=2.9.0",
    "xdg-base-dirs>=6.0.1",
    "keyring>=25.0.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-vcr>=1.0.2",
    "vcrpy>=6.0.1",
    "responses>=0.25.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "isort",
    "black"
]
local-llm = [
    "ollama>=0.2.0",
]

[project.scripts]
arxiv-agent = "martec_agent.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/martec_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
